--- a/writeups/hackthebox/machines.html
+++ b/writeups/hackthebox/machines.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>MrC0derH4cker</title>
+    <base href="/" target="_blank">
     <link rel="stylesheet" href="static/css/index.css">
 </head>
 
@@ -12,7 +13,10 @@
         <a href="writeups/hackthebox/machines.html">Hackthebox Machines</a>
         <a href="writeups/hackthebox/challenges/challenges.html">Hackthebox Challenges</a>
     </nav>
-    <p> Welcome, Navigate around to find my writeups and stuff :P </p>
+    <h1>Machines</h1>
+    <div id="content">
+    </div>
+    <script src="static/script/listing.js"></script>
 </body>
 
 </html>
