--- a/writeups/hackthebox/challenges/challenges.html
+++ b/writeups/hackthebox/challenges/challenges.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>MrC0derH4cker</title>
+    <base href="/" target="_blank">
     <link rel="stylesheet" href="static/css/index.css">
 </head>
 
@@ -12,7 +13,11 @@
         <a href="writeups/hackthebox/machines.html">Hackthebox Machines</a>
         <a href="writeups/hackthebox/challenges/challenges.html">Hackthebox Challenges</a>
     </nav>
-    <p> Welcome, Navigate around to find my writeups and stuff :P </p>
+    <h1>Categories</h1>
+    <div id="content">
+        <a href="writeups/hackthebox/challenges/pwn.html">Pwn</a>
+        <a href="writeups/hackthebox/challenges/web.html">Web</a>
+    </div>
 </body>
 
 </html>
