--- a/writeups/hackthebox/machines.html
+++ b/writeups/hackthebox/machines.html
@@ -16,6 +16,7 @@
     <h1>Machines</h1>
     <div id="content">
     </div>
+    <div id="loading" style="display: none;">Loading...</div>
     <script src="static/script/listing.js"></script>
 </body>
 
