--- a/writeups/hackthebox/challenges/challenges.html
+++ b/writeups/hackthebox/challenges/challenges.html
@@ -10,13 +10,13 @@
 <body>
     <nav>
         <a href="">MrC0derH4cker</a>
-        <a href="writeups/hackthebox/machines.html">Hackthebox Machines</a>
-        <a href="writeups/hackthebox/challenges/challenges.html">Hackthebox Challenges</a>
+        <a href="writeups/hackthebox/machines.html" target="_self">Hackthebox Machines</a>
+        <a href="writeups/hackthebox/challenges/challenges.html" target="_self">Hackthebox Challenges</a>
     </nav>
     <h1>Categories</h1>
     <div id="content">
-        <a href="writeups/hackthebox/challenges/pwn.html">Pwn</a>
-        <a href="writeups/hackthebox/challenges/web.html">Web</a>
+        <a href="writeups/hackthebox/challenges/pwn.html" target="_self"">Pwn</a>
+        <a href=" writeups/hackthebox/challenges/web.html" target="_self">Web</a>
     </div>
 </body>
 
