--- a/writeups/hackthebox/machines.html
+++ b/writeups/hackthebox/machines.html
@@ -10,8 +10,8 @@
 <body>
     <nav>
         <a href="">MrC0derH4cker</a>
-        <a href="writeups/hackthebox/machines.html">Hackthebox Machines</a>
-        <a href="writeups/hackthebox/challenges/challenges.html">Hackthebox Challenges</a>
+        <a href="writeups/hackthebox/machines.html" target="_self">Hackthebox Machines</a>
+        <a href="writeups/hackthebox/challenges/challenges.html" target="_self">Hackthebox Challenges</a>
     </nav>
     <h1>Machines</h1>
     <div id="content">
