--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <nav>
         <a href="">MrC0derH4cker</a>
-        <a href="writeups/hackthebox/machines.html">Hackthebox Machines</a>
-        <a href="writeups/hackthebox/challenges/challenges.html">Hackthebox Challenges</a>
+        <a href="writeups/hackthebox/machines.html" target="_self">Hackthebox Machines</a>
+        <a href="writeups/hackthebox/challenges/challenges.html" target="_self">Hackthebox Challenges</a>
     </nav>
     <p> Welcome, Navigate around to find my writeups and stuff :P </p>
 </body>
