--- a/writeups/hackthebox/challenges/challenges.html
+++ b/writeups/hackthebox/challenges/challenges.html
@@ -15,7 +15,7 @@
     </nav>
     <h1>Categories</h1>
     <div id="content">
-        <a href="writeups/hackthebox/challenges/pwn.html" target="_self"">Pwn</a>
+        <a href="writeups/hackthebox/challenges/pwn.html" target="_self">Pwn</a>
         <a href=" writeups/hackthebox/challenges/web.html" target="_self">Web</a>
     </div>
 </body>
