--- a/writeups/hackthebox/challenges/web.html
+++ b/writeups/hackthebox/challenges/web.html
@@ -9,9 +9,9 @@
 
 <body>
     <nav>
-        <a href="">MrC0derH4cker</a>
-        <a href="writeups/hackthebox/machines.html">Hackthebox Machines</a>
-        <a href="writeups/hackthebox/challenges/challenges.html">Hackthebox Challenges</a>
+        <a href="" target="_self">MrC0derH4cker</a>
+        <a href="writeups/hackthebox/machines.html" target="_self">Hackthebox Machines</a>
+        <a href="writeups/hackthebox/challenges/challenges.html" target="_self">Hackthebox Challenges</a>
     </nav>
     <h1>Web Challenges</h1>
     <div id="content">
