added more stuff

--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
 
 <head>
     <title>MrC0derH4cker</title>
+    <base href="/" target="_blank">
     <link rel="stylesheet" href="static/css/index.css">
 </head>
 
 <body>
-    <nav>
-        <a href="" target="_self">MrC0derH4cker</a>
-        <a href="writeups/hackthebox/machines.html" target="_self">Hackthebox Machines</a>
-        <a href="writeups/hackthebox/challenges/challenges.html" target="_self">Hackthebox Challenges</a>
-    </nav>
+    <div id="nav-container"></div>
+    <script>
+        fetch('nav.html').then(res => res.text()).then(res => {
+            document.getElementById('nav-container').insertAdjacentHTML('beforeend', res);
+        });
+    </script>
     <p> Welcome, Navigate around to find my writeups and stuff :P </p>
 </body>
 
