--- a/programming/leetcode.html
+++ b/programming/leetcode.html
@@ -14,7 +14,7 @@
             document.getElementById('nav-container').insertAdjacentHTML('beforeend', res);
         });
     </script>
-    <h1>Web Challenges</h1>
+    <h1>Leetcode Problem Solutions</h1>
     <div id="content">
     </div>
     <div id="loading" style="display: none;">Loading...</div>
