--- a/about.html
+++ b/about.html
@@ -14,12 +14,9 @@
             document.getElementById('nav-container').insertAdjacentHTML('beforeend', res);
         });
     </script>
-    <h1>Web Challenges</h1>
-    <div id="content">
-    </div>
-    <div id="loading" style="display: none;">Loading...</div>
-    <script src="static/script/searchbar.js"></script>
-    <script src="static/script/listing.js"></script>
+    <p> Hello, </p>
+    <p>Welcome to my website!</p>
+    <p>Im Vigneswar, Im a Coder and a Hacker!</p>
 </body>
 
 </html>
