--- a/programming/leetcode.html
+++ b/programming/leetcode.html
@@ -18,7 +18,8 @@
     <div id="content">
     </div>
     <div id="loading" style="display: none;">Loading...</div>
-    <script src="static/script/listing.js"></script>
+    <script src="static/script/searchbar.js"></script>
+    <script src="static/script/leetcode_listing.js"></script>
 </body>
 
 </html>
