--- a/nav.html
+++ b/nav.html
@@ -1,5 +1,6 @@
 <nav>
     <a href="" target="_self">MrC0derH4cker</a>
+    <a href="about.html" target="_self">About</a>
     <a href="writeups/hackthebox/machines.html" target="_self">Hackthebox Machines</a>
     <a href="writeups/hackthebox/challenges.html" target="_self">Hackthebox Challenges</a>
     <a href="programming/leetcode.html" target="_self">LeetCode Solutions</a>
