--- a/writeups/hackthebox/machines.html
+++ b/writeups/hackthebox/machines.html
@@ -18,6 +18,7 @@
     <div id="content">
     </div>
     <div id="loading" style="display: none;">Loading...</div>
+    <script src="static/script/searchbar.js"></script>
     <script src="static/script/listing.js"></script>
 </body>
 
