--- a/programming/view_code.html
+++ b/programming/view_code.html
@@ -14,9 +14,12 @@
             document.getElementById('nav-container').insertAdjacentHTML('beforeend', res);
         });
     </script>
-    <code id="code">
-    </code>
-    <script src="static/js/view_code.js"></script>
+    <div id="code-container">
+        <pre id="line-numbers"></pre>
+        <pre id="code">
+        </pre>
+    </div>
+    <script src="static/script/view_code.js"></script>
 </body>
 
 </html>
