--- a/nav.html
+++ b/nav.html
@@ -1,7 +1,7 @@
 <nav>
-    <a href="" target="_self">MrC0derH4cker</a>
-    <a href="about.html" target="_self">About</a>
-    <a href="writeups/hackthebox/machines.html" target="_self">Hackthebox Machines</a>
-    <a href="writeups/hackthebox/challenges.html" target="_self">Hackthebox Challenges</a>
-    <a href="programming/leetcode.html" target="_self">LeetCode Solutions</a>
+    <a href="" target="_self" id="home">MrC0derH4cker</a>
+    <a href="about.html" target="_self" id="about">About</a>
+    <a href="writeups/hackthebox/machines.html" target="_self" class="navitem">Hackthebox Machines</a>
+    <a href="writeups/hackthebox/challenges.html" target="_self" class="navitem">Hackthebox Challenges</a>
+    <a href="programming/leetcode.html" target="_self" class="navitem">LeetCode Solutions</a>
 </nav>
